<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBEFCC"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold">


        </TextView>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/introducao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explicacao_jogo"
            android:textAlignment="center"
            android:paddingHorizontal="10dp"
            android:textSize="20dp"
            android:textStyle="italic"
            android:onClick="start_game"
            >

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/regras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rules_init"
            android:textAlignment="center"
            android:paddingHorizontal="10dp"
            android:textSize="25sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/rule_1"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:paddingHorizontal="10dp"
            android:textStyle="italic">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/rule_2"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:paddingHorizontal="10dp"
            android:textStyle="italic">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/rule_3"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:paddingHorizontal="10dp"
            android:textStyle="italic">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/rule_4"
            android:textSize="20sp"
            android:paddingHorizontal="10dp"
            android:textStyle="bold">

        </TextView>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/start_button"
                style="@style/start_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_start"
                android:textSize="20sp">

            </Button>

        </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>
